+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.6.3
==========================

*Release date: XX-XX-XXX*

Core and Builtins
-----------------

- Issue #5759: float() didn't call __float__ on str subclasses.


What's New in Python 2.6.2 rc 1
===============================

*Release date: 06-Apr-2009*

Core and Builtins
-----------------

- xrange() is now registered as a Sequence.

- Fix a problem in PyErr_NormalizeException that leads to "undetected errors"
  when hitting the recursion limit under certain circumstances.

- Issue #1665206: Remove the last eager import in _warnings.c and make it lazy.

- Issue #4034: Fix weird attribute error messages of the traceback object. (As
  a result traceback.__members__ no longer exists.)

- Issue #5247: Improve error message when unknown format codes are
  used when using str.format() with str, unicode, long, int, and
  float arguments.

- Running Python with the -3 option now also warns about classic division
  for ints and longs.

- Issue #5013: Fixed a bug in FileHandler which occurred when the delay
  parameter was set.

- Issue 1242657: the __len__() and __length_hint__() calls in several tools
  were suppressing all exceptions.  These include list(), filter(), map(),
  zip(), and bytearray().

- Issue #4935: The overflow checking code in the expandtabs() method common
  to str, bytes and bytearray could be optimized away by the compiler, letting
  the interpreter segfault instead of raising an error.

- Issue #4915: Port sysmodule to Windows CE.

- Issue #1180193: When importing a module from a .pyc (or .pyo) file with
  an existing .py counterpart, override the co_filename attributes of all
  code objects if the original filename is obsolete (which can happen if the
  file has been renamed, moved, or if it is accessed through different paths).
  Patch by Ziga Seilnacht and Jean-Paul Calderone.
