@@ -14,6 +14,15 @@ Core and Builtins
 
 - Issue #5759: float() didn't call __float__ on str subclasses.
 
+Library
+-------
+
+- Issue #1161031: fix readwrite select flag handling: POLLPRI now
+  results in a handle_expt_event call, not handle_read_event, and POLLERR
+  and POLLNVAL now call handle_close, not handle_expt_event.  Also,
+  dispatcher now has an 'ignore_log_types' attribute for suppressing
+  log messages, which is set to 'warning' by default.
+
 
 What's New in Python 2.6.2 rc 1
 ===============================
